corrects sign in drag force

--- a/docs/src/JuliesMaterial/PhysicsWithPython-2.ipynb
+++ b/docs/src/JuliesMaterial/PhysicsWithPython-2.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "Next, we need to consider the force on an object caused by air resistance.  We call this force drag and it is an interesting force.  Instead of depending directly on time or position like most forces, it depends on the velocity of the object.  We can write an equation for the drag force of an object using the following equation:\n",
     "\n",
-    "$$F_D(t) = mD\\vec{v}(t)|\\vec{v}(t)|,$$\n",
+    "$$F_D(t) = -mD\\vec{v}(t)|\\vec{v}(t)|,$$\n",
     "\n",
     "where D is a constant that depends on the shape of the object but is usually between 0 and 1.  Since the drag force depends on velocity we call it a non-conservative force, meaning that an energy is not conserved when this force is used.  You can read more about conservative and non-conservative forces [here](https://mhjensen.github.io/Physics321/doc/LectureNotes/_build/html/chapter4.html) (see section 4.4).\n",
     "\n",
@@ -692,7 +692,7 @@
     "#\n",
     "#\n",
     "#\n",
-    "FD = D*v[i]*np.sqrt(v[i][0]**2 + v[i][1]**2)"
+    "FD = -D*v[i]*np.sqrt(v[i][0]**2 + v[i][1]**2)"
    ]
   }
  ],
