--- a/docs/src/JuliesMaterial/Day1Lec2.ipynb
+++ b/docs/src/JuliesMaterial/Day1Lec2.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "## Need to Discretize\n",
     "\n",
-    "* Most physics equations are written to use a continous variable or to solve for a continous equation\n",
+    "* Most physics equations are written to use a continuous variable or to solve for a continuous equation\n",
     "\n",
     "$$v(t) = \\int_{t_0}^t a dt = v_0 + at,$$\n",
     "\n",
@@ -35,7 +35,7 @@
     "\n",
     "$$t = \\{t_0, t_0 + \\Delta t, t_0 + 2\\Delta t, t_0 + 3\\Delta t, ...\\} = \\{t_0, t_1, t_2, t_3, ...\\}$$\n",
     "\n",
-    "* $\\Delta t$ is some tiny chunk of time (typically $\\Delta$t << 1).  The smaller the value the closer to the true (continuous) solution"
+    "* $\\Delta t$ is some tiny chunk of time (typically $\\Delta$t << 1).  The smaller the value the closer to the true (continuous) solution\n"
    ]
   },
   {
@@ -92,7 +92,7 @@
     "* Seeks to describe the motion that comes from two interacting objects\n",
     "    * Gravitational force between two very large objects\n",
     "    * Electric force between two charged objects\n",
-    "    * Forces between two particle (i.e. nucleons, atoms, molecules)\n",
+    "    * Forces between two particles (i.e., nucleons, atoms, molecules)\n",
     "* Since the force depends on another object, and especially the distance between two objects, this is a much more complicated problem than when considering a constant force on an object.\n",
     "* Also note that due to Newton's third law, for each pair of interacting objects there are two forces."
    ]
@@ -176,9 +176,9 @@
     "$$\\vec{F}_{G,E}(\\vec{r}) = -G\\frac{m_\\bigodot}{|\\vec{r}|^2} m_E\\hat{r} \\quad \\rightarrow \\quad a_{G,E} = -G\\frac{m_\\bigodot}{|\\vec{r}|^2}\\hat{r}$$\n",
     "\n",
     "* Note that unlike many other problems you have encountered, this acceleration is not constant.  It changes as the Earth's distance from the Sun changes.\n",
-    "* From the pre-course assignements we know that an acceleration over time causes a velocity and a velocity over time causes a change in position.  **But**, the change in position will cause a change in the acceleration.\n",
+    "* From the pre-course assignments we know that an acceleration over time causes a velocity and a velocity over time causes a change in position.  **But**, the change in position will cause a change in the acceleration.\n",
     "* This puts us in a calculation loop, which is exactly the type of problem computers excel at!\n",
-    "* Assumption: We assume that since the Sun is at the origin, in our relative coordinate frame it is not moving.  So we do not need to worry about calculating forces on the Sun."
+    "* Assumption: We assume that since the Sun is at the origin, in our relative coordinate frame it is not moving.  So we do not need to worry about calculating forces on the Sun.\n"
    ]
   },
   {
@@ -200,6 +200,13 @@
     "\n",
     "* Homework for today is posted on the schedule page of the course website.  Make sure you complete these assignments by class tomorrow!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -218,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
