Added Colab Link

--- a/docs/src/JuliesMaterial/Day1Activity1.ipynb
+++ b/docs/src/JuliesMaterial/Day1Activity1.ipynb
@@ -8,7 +8,10 @@
     "\n",
     "## Computational Model of the Earth-Sun System Using the Velocity-Verlet Method\n",
     "\n",
-    "Complete the following coding activity as a group.  Everyone should write their own code but you can work together to figure out the questions."
+    "Complete the following coding activity as a group.  Everyone should write their own code but you can work together to figure out the questions.\n",
+    "\n",
+    "\n",
+    "If you want to use this notebook in Google Colab click [this link](https://drive.google.com/file/d/1p--rhlGFw3e6iv2msVG8KDzAtt7iH80v/view?usp=sharing) (make sure you are logged into your Google account).  Once the webpage opens up click `File > Save copy a in Drive'.  Then go to your own Google Drive account and use the copy.\n"
    ]
   },
   {
