--- a/docs/src/MortensMaterial/Day4Lec.ipynb
+++ b/docs/src/MortensMaterial/Day4Lec.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "$$\n",
     "-\\frac{\\hbar^2}{2 m \\alpha^2} \\frac{d^2}{d\\rho^2} u(\\rho) \n",
-    "       +  V(\\rho){\\rho^2}u(\\rho)  = E u(\\rho) .\n",
+    "       +  V(\\rho)u(\\rho)  = E u(\\rho) .\n",
     "$$"
    ]
   },
@@ -308,7 +308,7 @@
     "\n",
     "\n",
     "\n",
-    "## As a eigenvalue problem\n",
+    "## As an eigenvalue problem\n",
     "Define first the diagonal matrix element"
    ]
   },
@@ -372,21 +372,21 @@
     "\n",
     "$$\n",
     "\\begin{equation}\n",
-    "    \\left( \\begin{array}{ccccccc} d_1 & e_1 & 0   & 0    & \\dots  &0     & 0 \\\\\n",
+    "    \\begin{bmatrix} d_1 & e_1 & 0   & 0    & \\dots  &0     & 0 \\\\\n",
     "                                e_1 & d_2 & e_2 & 0    & \\dots  &0     &0 \\\\\n",
     "                                0   & e_2 & d_3 & e_3  &0       &\\dots & 0\\\\\n",
     "                                \\dots  & \\dots & \\dots & \\dots  &\\dots      &\\dots & \\dots\\\\\n",
     "                                0   & \\dots & \\dots & \\dots  &\\dots       &d_{n_{\\mathrm{step}}-2} & e_{n_{\\mathrm{step}}-1}\\\\\n",
     "                                0   & \\dots & \\dots & \\dots  &\\dots       &e_{n_{\\mathrm{step}}-1} & d_{n_{\\mathrm{step}}-1}\n",
-    "             \\end{array} \\right)      \\left( \\begin{array}{c} u_{1} \\\\\n",
+    "             \\end{bmatrix}      \\begin{bmatrix} u_{1} \\\\\n",
     "                                                              u_{2} \\\\\n",
     "                                                              \\dots\\\\ \\dots\\\\ \\dots\\\\\n",
     "                                                              u_{n_{\\mathrm{step}}-1}\n",
-    "             \\end{array} \\right)=\\lambda \\left( \\begin{array}{c} u_{1} \\\\\n",
+    "             \\end{bmatrix}=\\lambda \\begin{bmatrix} u_{1} \\\\\n",
     "                                                              u_{2} \\\\\n",
     "                                                              \\dots\\\\ \\dots\\\\ \\dots\\\\\n",
     "                                                              u_{n_{\\mathrm{step}}-1}\n",
-    "             \\end{array} \\right) \n",
+    "             \\end{bmatrix} \n",
     "\\label{eq:sematrix} \\tag{2}\n",
     "\\end{equation}\n",
     "$$"
@@ -408,13 +408,13 @@
     "\n",
     "$$\n",
     "\\begin{equation}\n",
-    "    \\left( \\begin{array}{ccccccc} \\frac{1}{h^2}+V_1 & -\\frac{1}{2h^2} & 0   & 0    & \\dots  &0     & 0 \\\\\n",
+    "    \\begin{bmatrix} \\frac{1}{h^2}+V_1 & -\\frac{1}{2h^2} & 0   & 0    & \\dots  &0     & 0 \\\\\n",
     "                                -\\frac{1}{2h^2} & \\frac{1}{h^2}+V_2 & -\\frac{1}{2h^2} & 0    & \\dots  &0     &0 \\\\\n",
     "                                0   & -\\frac{1}{2h^2} & \\frac{1}{h^2}+V_3 & -\\frac{1}{2h^2}  &0       &\\dots & 0\\\\\n",
     "                                \\dots  & \\dots & \\dots & \\dots  &\\dots      &\\dots & \\dots\\\\\n",
     "                                0   & \\dots & \\dots & \\dots  &\\dots       &\\frac{1}{h^2}+V_{n_{\\mathrm{step}}-2} & -\\frac{1}{2h^2}\\\\\n",
     "                                0   & \\dots & \\dots & \\dots  &\\dots       &-\\frac{1}{2h^2} & \\frac{1}{h^2}+V_{n_{\\mathrm{step}}-1}\n",
-    "             \\end{array} \\right)  \n",
+    "             \\end{bmatrix}\n",
     "\\label{eq:matrixse} \\tag{3} \n",
     "\\end{equation}\n",
     "$$"
@@ -449,6 +449,7 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
+    "%matplotlib inline\n",
     "#Program which solves the one-particle Schrodinger equation \n",
     "#for a potential specified in function\n",
     "#potential(). This example is for the harmonic oscillator in one dimension\n",
@@ -459,17 +460,17 @@
     "def initialize():\n",
     "    RMin = -5.0\n",
     "    RMax = 5.0\n",
-    "    Dim = 400\n",
-    "    return RMin, RMax, lOrbital, Dim\n",
+    "    Dim = 100\n",
+    "    return RMin, RMax, Dim\n",
     "# Here we set up the harmonic oscillator potential\n",
     "def potential(r):\n",
     "    return 0.5*r*r\n",
     "\n",
     "#Get the boundary, orbital momentum and number of integration points\n",
-    "RMin, RMax, lOrbital, Dim = initialize()\n",
+    "RMin, RMax, Dim = initialize()\n",
     "\n",
     "#Initialize constants\n",
-    "Step    = RMax/(Dim+1)\n",
+    "Step    = (RMax-RMin)/(Dim+1)\n",
     "DiagConst = 1.0 / (Step*Step)\n",
     "NondiagConst =  -0.5 / (Step*Step)\n",
     "\n",
@@ -504,10 +505,10 @@
     "SecondEigvector = EigVectors[:,1]\n",
     "ThirdEigvector = EigVectors[:,2]\n",
     "# Plot results\n",
-    "plt.plot(r, FirstEigvector**2 ,'b-',r, SecondEigvector**2 ,'g-',r, ThirdEigvector**2 ,'r-')\n",
-    "plt.axis([0,4.6,0.0, 0.025])\n",
-    "plt.xlabel(r'$r$')\n",
-    "plt.ylabel(r'Radial probability $r^2|R(r)|^2$')\n",
+    "plt.plot(r, FirstEigvector ,'b-',r, SecondEigvector ,'g-',r, ThirdEigvector ,'r-')\n",
+    "plt.axis([RMin,RMax,-0.1, 0.1])\n",
+    "plt.xlabel(r'$x$')\n",
+    "plt.ylabel(r'Radial probability $|u(x)|^2$')\n",
     "plt.title(r'Radial probability distributions for three lowest-lying states')\n",
     "plt.savefig('eigenvector.pdf')\n",
     "plt.show()"
