--- a/docs/src/MortensMaterial/Day4Lec.ipynb
+++ b/docs/src/MortensMaterial/Day4Lec.ipynb
@@ -460,37 +460,37 @@
     "def initialize():\n",
     "    RMin = -5.0\n",
     "    RMax = 5.0\n",
-    "    Dim = 100\n",
-    "    return RMin, RMax, Dim\n",
+    "    n = 400\n",
+    "    return RMin, RMax, n\n",
     "# Here we set up the harmonic oscillator potential\n",
     "def potential(r):\n",
     "    return 0.5*r*r\n",
     "\n",
     "#Get the boundary, orbital momentum and number of integration points\n",
-    "RMin, RMax, Dim = initialize()\n",
+    "RMin, RMax, n = initialize()\n",
     "\n",
-    "#Initialize constants\n",
-    "Step    = (RMax-RMin)/(Dim+1)\n",
+    "#Initialize constants, why n+1?\n",
+    "Step    = (RMax-RMin)/(n+1)\n",
     "DiagConst = 1.0 / (Step*Step)\n",
     "NondiagConst =  -0.5 / (Step*Step)\n",
     "\n",
     "#Calculate array of potential values\n",
-    "v = np.zeros(Dim)\n",
-    "r = np.linspace(RMin,RMax,Dim)\n",
-    "for i in range(Dim):\n",
+    "v = np.zeros(n)\n",
+    "r = np.linspace(RMin,RMax,n)\n",
+    "for i in range(n):\n",
     "    r[i] = RMin + (i+1) * Step\n",
     "    v[i] = potential(r[i])\n",
     "\n",
     "#Setting up a tridiagonal matrix and finding eigenvectors and eigenvalues\n",
-    "Hamiltonian = np.zeros((Dim,Dim))\n",
+    "Hamiltonian = np.zeros((n,n))\n",
     "Hamiltonian[0,0] = DiagConst + v[0];\n",
     "Hamiltonian[0,1] = NondiagConst;\n",
-    "for i in range(1,Dim-1):\n",
+    "for i in range(1,n-1):\n",
     "    Hamiltonian[i,i-1]  = NondiagConst;\n",
     "    Hamiltonian[i,i]    = DiagConst + v[i];\n",
     "    Hamiltonian[i,i+1]  = NondiagConst;\n",
-    "Hamiltonian[Dim-1,Dim-2] = NondiagConst;\n",
-    "Hamiltonian[Dim-1,Dim-1] = DiagConst + v[Dim-1];\n",
+    "Hamiltonian[n-1,n-2] = NondiagConst;\n",
+    "Hamiltonian[n-1,n-1] = DiagConst + v[n-1];\n",
     "\n",
     "# diagonalize and obtain eigenvalues, not necessarily sorted\n",
     "EigValues, EigVectors = np.linalg.eig(Hamiltonian)\n",
@@ -505,13 +505,113 @@
     "SecondEigvector = EigVectors[:,1]\n",
     "ThirdEigvector = EigVectors[:,2]\n",
     "# Plot results\n",
-    "plt.plot(r, FirstEigvector ,'b-',r, SecondEigvector ,'g-',r, ThirdEigvector ,'r-')\n",
-    "plt.axis([RMin,RMax,-0.1, 0.1])\n",
+    "plt.plot(r, FirstEigvector**2 ,'b-',r, SecondEigvector**2 ,'g-',r, ThirdEigvector**2 ,'r-')\n",
+    "plt.axis([RMin,RMax,-0.01, 0.01])\n",
     "plt.xlabel(r'$x$')\n",
     "plt.ylabel(r'Radial probability $|u(x)|^2$')\n",
     "plt.title(r'Radial probability distributions for three lowest-lying states')\n",
     "plt.savefig('eigenvector.pdf')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- --- begin exercise --- -->\n",
+    "\n",
+    "## Exercise 1: Box potential, infinite walls and finite box\n",
+    "\n",
+    "\n",
+    "**a)**\n",
+    "Replace the harmonic oscillator potential with a box potential with infinite walls. Define the boundary conditions and\n",
+    "scale the equation of motion by introducing a dimensionless length scale. Find this length scale.\n",
+    "\n",
+    "**b)**\n",
+    "Use the above code (or write your own) and compute the eigenvalues for this potential and compare with the analytical results from your code developed for the classical two-point boundary value problem.\n",
+    "\n",
+    "**c)**\n",
+    "Replace now one of the infinite walls with a finite box potential (infinite at $x=0$). Introduce a potential depth parameter $V_0$ and a reach $a$ so that the potential $V(x) = -V_0$ when $0 < x \\le a$ and $V(x)=0$ for $x > a$. Scale the equations and tune $V_0$ and $a$ so that you get only one bound state.  Discuss the differences between the infinite wall case and the finite box potential.\n",
+    "\n",
+    "\n",
+    "<!-- --- end exercise --- -->\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<!-- --- begin exercise --- -->\n",
+    "\n",
+    "## Exercise 2: Hydrogen atom (challenge)\n",
+    "\n",
+    "\n",
+    "**a)**\n",
+    "Replace now the one-dimensional Schrödinger equation with the three-dimensional one where we have made a transformation from Cartesian coordinates to spherical coordinates with $r\\in [0,\\infty)$ and $\\phi\\in [0,2\\pi]$ and $\\theta \\in [0,\\pi]$.\n",
+    "The radial equation reads"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "-\\frac{\\hbar^2}{2 m} \\left ( \\frac{1}{r^2} \\frac{d}{dr} r^2\n",
+    "  \\frac{d}{dr} - \\frac{l (l + 1)}{r^2} \\right )R(r) \n",
+    "     + V(r) R(r) = E R(r).\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The quantum number\n",
+    "$l$ is the orbital momentum of the electron.   Substitute $R(r) = (1/r) u(r)$ and show that the equation becomes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "-\\frac{\\hbar^2}{2 m} \\frac{d^2}{dr^2} u(r) \n",
+    "       + \\left ( V(r) + \\frac{l (l + 1)}{r^2}\\frac{\\hbar^2}{2 m}\n",
+    "                                    \\right ) u(r)  = E u(r) .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The boundary conditions are $u(0)=0$ and $u(\\infty)=0$.\n",
+    "\n",
+    "**b)**\n",
+    "We introduce a dimensionless variable $\\rho = (1/\\alpha) r$\n",
+    "where $\\alpha$ is a constant with dimension length. Show that you can rewrite the above differential equation as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "-\\frac{\\hbar^2}{2 m \\alpha^2} \\frac{d^2}{d\\rho^2} u(\\rho) \n",
+    "       + \\left ( V(\\rho) + \\frac{l (l + 1)}{\\rho^2}\n",
+    "         \\frac{\\hbar^2}{2 m\\alpha^2} \\right ) u(\\rho)  = E u(\\rho) .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**c)**\n",
+    "Define now the potential $V$ to be the electrostatic Coulomb potential and scale the equations so that you get rid of the parameter $\\alpha$. This choice of $\\alpha$ leads to a famous length scale in physics. What is the name of this parameter?\n",
+    "\n",
+    "**d)**\n",
+    "Set $l=0$ and find the three lowest eigenvalues and compare them with the analytical results!\n",
+    "\n",
+    "<!-- --- end exercise --- -->"
    ]
   }
  ],
