--- a/docs/src/JuliesMaterial/Day2Lec.ipynb
+++ b/docs/src/JuliesMaterial/Day2Lec.ipynb
@@ -390,7 +390,7 @@
     "\n",
     "</br>\n",
     "\n",
-    "As one final step, to ensure that all of the probabilities add up to 1, we need to _normalize_ the wavefunction.  This means that we want the norm of our wavefunction (which is a vector) the be zero.\n",
+    "As one final step, to ensure that all of the probabilities add up to 1, we need to _normalize_ the wavefunction.  This means that we want the norm of our wavefunction (which is a vector) the be one.\n",
     "\n"
    ]
   },
