--- a/docs/src/MortensMaterial/Day3Lec.ipynb
+++ b/docs/src/MortensMaterial/Day3Lec.ipynb
@@ -521,8 +521,8 @@
    "metadata": {},
    "source": [
     "with $\\lambda= FL^2/\\gamma$ we have an equation that when discretized, becomes an eigenvalue problem.\n",
-    "We use the same \n",
-    "expression for the second derivative of a function $u$ as we did in project 1, namely"
+    "We use one of the more famous \n",
+    "expression for the second derivative of a function $u$ (called a [three-point](https://github.com/CompPhysics/ComputationalPhysics/blob/master/doc/Lectures/lectures2015.pdf) formula to be derived  on whiteboard)"
    ]
   },
   {
@@ -544,14 +544,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $h$ is our step.\n",
+    "where $h$ is a so-called  step size.\n",
     "\n",
-    "## Min and Max values for the varibale $\\rho$\n",
+    "## Min and Max values for the variabale $\\rho$\n",
     "\n",
     "Next we define minimum and maximum values for the variable $\\rho$,\n",
     "$\\rho_{\\mathrm{min}}=0$  and $\\rho_{\\mathrm{max}}=1$, respectively.\n",
-    "With a given number of mesh points, $N$, we \n",
-    "define the step length $h$ as, with $\\rho_{\\mathrm{min}}=\\rho_0$  and $\\rho_{\\mathrm{max}}=\\rho_N$,"
+    "With a given number of mesh points, $n$, we \n",
+    "define the step length $h$ as, with $\\rho_{\\mathrm{min}}=\\rho_0$  and $\\rho_{\\mathrm{max}}=\\rho_n$,"
    ]
   },
   {
@@ -559,7 +559,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "h=\\frac{\\rho_N-\\rho_0 }{N}.\n",
+    "h=\\frac{\\rho_N-\\rho_0 }{n}.\n",
     "$$"
    ]
   },
@@ -575,7 +575,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\rho_i= \\rho_0 + ih \\hspace{1cm} i=1,2,\\dots , N.\n",
+    "\\rho_i= \\rho_0 + ih \\hspace{1cm} i=1,2,\\dots , n.\n",
     "$$"
    ]
   },
@@ -636,7 +636,7 @@
     "                                \\dots  & \\dots & \\dots & \\dots  &\\dots      &\\dots & \\dots\\\\\n",
     "                                0   & \\dots & \\dots & \\dots  &a  &d & a\\\\\n",
     "                                0   & \\dots & \\dots & \\dots  &\\dots       &a & d\\end{bmatrix} \n",
-    "                                 \\begin{bmatrix} u_1 \\\\ u_2 \\\\ u_3 \\\\ \\dots \\\\ u_{N-2} \\\\ u_{N-1}\\end{bmatrix} = \\lambda \\begin{bmatrix} u_1 \\\\ u_2 \\\\ u_3 \\\\ \\dots \\\\ u_{N-2} \\\\ u_{N-1}\\end{bmatrix} . \n",
+    "                                 \\begin{bmatrix} u_1 \\\\ u_2 \\\\ u_3 \\\\ \\dots \\\\ u_{n-2} \\\\ u_{n-1}\\end{bmatrix} = \\lambda \\begin{bmatrix} u_1 \\\\ u_2 \\\\ u_3 \\\\ \\dots \\\\ u_{n-2} \\\\ u_{n-1}\\end{bmatrix} . \n",
     "\\label{eq:matrixse} \\tag{4} \n",
     "\\end{equation}\n",
     "$$"
@@ -646,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have not included the endpoints $u_0$ and $u_N$. \n",
+    "We have not included the endpoints $u_0$ and $u_n$. \n",
     "We have defined $d=2/h^2$ and the non-diagonal ones as $a=-1/h^2$. This eigenvalue problem has analytical eigenpairs, with eigenvalues given as (note that we define the matrix to run from $i=1$ to $i=N-1$)"
    ]
   },
@@ -655,7 +655,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\lambda_j = d+2a\\cos{(\\frac{j\\pi}{N})}, \\hspace{0.2cm} j=1,2,\\dots N-1.\n",
+    "\\lambda_j = d+2a\\cos{(\\frac{j\\pi}{n})}, \\hspace{0.2cm} j=1,2,\\dots n-1.\n",
     "$$"
    ]
   },
@@ -671,7 +671,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{u}_j = [ \\sin(\\frac{j\\pi}{N}), \\sin(\\frac{2j\\pi}{N}), ..., \\sin(\\frac{(N-1)j\\pi}{N}) ]^T, \\hspace{0.2cm} j=1,2,\\dots N-1.\n",
+    "\\mathbf{u}_j = [ \\sin(\\frac{j\\pi}{n}), \\sin(\\frac{2j\\pi}{n}), ..., \\sin(\\frac{(N-1)j\\pi}{n}) ]^T, \\hspace{0.2cm} j=1,2,\\dots n-1.\n",
     "$$"
    ]
   },
@@ -698,28 +698,28 @@
     "def initialize():\n",
     "    RMin = 0.0\n",
     "    RMax = 1.0\n",
-    "    Dim = 10\n",
-    "    return RMin, RMax, Dim\n",
+    "    n = 10\n",
+    "    return RMin, RMax, n\n",
     "\n",
     "#Get the boundary and number of integration points\n",
-    "RMin, RMax, Dim = initialize()\n",
+    "RMin, RMax, n = initialize()\n",
     "\n",
     "#Initialize constants, step size and the constant values of the diagonal and non-diagonal elements\n",
-    "Step    = RMax/(Dim+1)\n",
+    "Step    = RMax/(n+1)\n",
     "DiagConst = 2.0 / (Step*Step)\n",
     "NondiagConst =  -1.0 / (Step*Step)\n",
     "\n",
     "\n",
     "#Setting up a tridiagonal matrix\n",
-    "Hamiltonian = np.zeros((Dim,Dim))\n",
+    "Hamiltonian = np.zeros((n,n))\n",
     "Hamiltonian[0,0] = DiagConst\n",
     "Hamiltonian[0,1] = NondiagConst\n",
-    "for i in range(1,Dim-1):\n",
+    "for i in range(1,n-1):\n",
     "    Hamiltonian[i,i-1]  = NondiagConst\n",
     "    Hamiltonian[i,i]    = DiagConst\n",
     "    Hamiltonian[i,i+1]  = NondiagConst\n",
-    "Hamiltonian[Dim-1,Dim-2] = NondiagConst\n",
-    "Hamiltonian[Dim-1,Dim-1] = DiagConst\n",
+    "Hamiltonian[n-1,n-2] = NondiagConst\n",
+    "Hamiltonian[n-1,n-1] = DiagConst\n",
     "# diagonalize and obtain eigenvalues, not necessarily sorted\n",
     "EigValues, EigVectors = np.linalg.eig(Hamiltonian)\n",
     "# sort eigenvectors and eigenvalues\n",
@@ -727,7 +727,7 @@
     "EigValues = EigValues[permute]\n",
     "EigVectors = EigVectors[:,permute]\n",
     "# compute  the difference between the numerical and exact eigenvalues\n",
-    "for i in range(Dim):\n",
+    "for i in range(n):\n",
     "    lambda_i = DiagConst+2*NondiagConst*cos((i+1)*pi*Step)\n",
     "    print(abs(EigValues[i]-lambda_i))"
    ]
@@ -772,7 +772,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**a)**\n",
     "Show that an orthogonal or unitary transformation"
    ]
   },
@@ -802,7 +801,7 @@
     "\n",
     "\n",
     "**a)**\n",
-    "Convince your self about the proper scaling of the differential equation in terms of a dimensionless length parameter. What is the dimension of $u(x)$?\n",
+    "Convince your self about the proper scaling of the differential equation in terms of a dimensionless length parameter. What is the dimension of $u(x)$? What is the dimension of the parameter $\\gamma$ in the differential equation for the buckling beam?\n",
     "\n",
     "**b)**\n",
     "Convince yourself that the differential equation, when discretized, can be rewritten as an eigenvalue problem.\n",
