update of schedule

--- a/docs/src/MortensMaterial/Day3Lec.ipynb
+++ b/docs/src/MortensMaterial/Day3Lec.ipynb
@@ -809,6 +809,8 @@
     "**c)**\n",
     "Use the included python code here or write your own and compare the analytical eigenvalues with the numerical ones for $n=4$, $n=10$ and $n=100$. Comment your results.\n",
     "\n",
+    "**d)**\n",
+    "Plot the eigenvalues for the three lowest eigenvalues and comment your results.\n",
     "\n",
     "\n",
     "\n",
