--- a/docs/src/MortensMaterial/Day3Lec.ipynb
+++ b/docs/src/MortensMaterial/Day3Lec.ipynb
@@ -546,7 +546,7 @@
    "source": [
     "where $h$ is a so-called  step size.\n",
     "\n",
-    "## Min and Max values for the variabale $\\rho$\n",
+    "## Min and Max values for the variable $\\rho$\n",
     "\n",
     "Next we define minimum and maximum values for the variable $\\rho$,\n",
     "$\\rho_{\\mathrm{min}}=0$  and $\\rho_{\\mathrm{max}}=1$, respectively.\n",
@@ -801,7 +801,7 @@
     "\n",
     "\n",
     "**a)**\n",
-    "Convince your self about the proper scaling of the differential equation in terms of a dimensionless length parameter. What is the dimension of $u(x)$? What is the dimension of the parameter $\\gamma$ in the differential equation for the buckling beam?\n",
+    "Convince your self about the proper scaling of the differential equation in terms of a dimensionless length parameter. What is the dimension of $u(x)$? What is the dimension of the parameter $\\gamma$ in the differential equation for the buckling beam/spring?\n",
     "\n",
     "**b)**\n",
     "Convince yourself that the differential equation, when discretized, can be rewritten as an eigenvalue problem.\n",
@@ -810,7 +810,7 @@
     "Use the included python code here or write your own and compare the analytical eigenvalues with the numerical ones for $n=4$, $n=10$ and $n=100$. Comment your results.\n",
     "\n",
     "**d)**\n",
-    "Plot the eigenvalues for the three lowest eigenvalues and comment your results.\n",
+    "Plot the eigenvectors for the three lowest eigenvalues and comment your results.\n",
     "\n",
     "\n",
     "\n",
