--- a/docs/src/MortensMaterial/Day5Lec1.ipynb
+++ b/docs/src/MortensMaterial/Day5Lec1.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "## Moving to three dimension and spherical coordinates\n",
     "\n",
-    "We are first interested in the solution of the radial part of Schroedinger's equation for one electron. This equation reads"
+    "We are first interested in the solution of the radial part of Schrödinger's equation for one electron. This equation reads"
    ]
   },
   {
@@ -108,7 +108,7 @@
     "Since we have made a transformation to spherical coordinates it means that \n",
     "$r\\in [0,\\infty)$.  \n",
     "The quantum number\n",
-    "$l$ is the orbital momentum of the electron.   Then we substitute $R(r) = (1/r) u(r)$ and obtain"
+    "$l$ is the orbital momentum of the electron.   A standard trick is to make the  substitution $R(r) = (1/r) u(r)$ and obtain"
    ]
   },
   {
@@ -132,7 +132,8 @@
     "\n",
     "\n",
     "## Scaling again\n",
-    "We introduce a dimensionless variable $\\rho = (1/\\alpha) r$\n",
+    "\n",
+    "We introduce again a dimensionless variable $\\rho = (1/\\alpha) r$\n",
     "where $\\alpha$ is a constant with dimension length and get"
    ]
   },
@@ -186,6 +187,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Note that here, compared with what did earlier, we multiplied away the factor $1/2$ in the kinetic energy and the potential energy. It means that our energies will be twice the value.**\n",
+    "\n",
     "## Natural length scale\n",
     "We have thus"
    ]
@@ -253,7 +256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we can rewrite Schroedinger's equation as"
+    "we can rewrite Schrödinger's equation as"
    ]
   },
   {
@@ -271,13 +274,14 @@
    "source": [
     "This is the first equation to solve numerically. In three dimensions \n",
     "the eigenvalues for $l=0$ are \n",
-    "$\\lambda_0=3,\\lambda_1=7,\\lambda_2=11,\\dots .$\n",
+    "$\\lambda_0=3,\\lambda_1=7,\\lambda_2=11,\\dots .$ This is because we multiplied away $1/2$ in the kinetic and potential energy.\n",
+    "If you keep it you simply need to divide by two the above energies.\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "## Two particles (electrons)\n",
-    "We are going to study two electrons in a harmonic oscillator well which\n",
+    "We are going to study two particles (electrons for example) in a harmonic oscillator well which\n",
     "also interact via a repulsive Coulomb interaction.\n",
     "Let us start with the single-electron equation written as"
    ]
@@ -298,7 +302,7 @@
    "source": [
     "where $E^{(1)}$ stands for the energy with one electron only.\n",
     "For two electrons with no repulsive Coulomb interaction, we have the following \n",
-    "Schroedinger equation"
+    "Schrödinger equation"
    ]
   },
   {
@@ -504,22 +508,6 @@
    "source": [
     "We treat $\\omega_r$ as a parameter which reflects the strength of the oscillator potential.\n",
     "\n",
-    "Here we will study the cases $\\omega_r = 0.01$, $\\omega_r = 0.5$, $\\omega_r =1$,\n",
-    "and $\\omega_r = 5$   \n",
-    "for the ground state only, that is the lowest-lying state.\n",
-    "\n",
-    "With no repulsive Coulomb interaction \n",
-    "you should get a result which corresponds to \n",
-    "the relative energy of a non-interacting system.   \n",
-    "Make sure your results are \n",
-    "stable as functions of $\\rho_{\\mathrm{max}}$ and the number of steps.\n",
-    "\n",
-    "We are only interested in the ground state with $l=0$. We omit the \n",
-    "center-of-mass energy.\n",
-    "\n",
-    "For specific oscillator frequencies, the above equation has analytic answers,\n",
-    "see the article by M. Taut, Phys. Rev. A 48, 3561 - 3566 (1993).\n",
-    "The article can be retrieved from the following web address <http://prola.aps.org/abstract/PRA/v48/i5/p3561_1>.\n",
     "\n",
     "\n",
     "\n",
@@ -556,23 +544,24 @@
     "    n = 400\n",
     "    return RMin, RMax, n\n",
     "# Here we set up the harmonic oscillator potential plus the Coulomb potential\n",
-    "def potential(r):\n",
-    "    return 0.5*r*r+1/r\n",
+    "def potential(r,omega):\n",
+    "    return omega*omega*r*r+1/r\n",
     "\n",
     "#Get the boundary, orbital momentum and number of integration points\n",
     "RMin, RMax, n = initialize()\n",
     "\n",
     "#Initialize constants, why n+1?\n",
     "Step    = (RMax-RMin)/(n+1)\n",
-    "DiagConst = 1.0 / (Step*Step)\n",
-    "NondiagConst =  -0.5 / (Step*Step)\n",
+    "DiagConst = 2.0 / (Step*Step)\n",
+    "NondiagConst =  -1.0 / (Step*Step)\n",
+    "omega = 1.0\n",
     "\n",
     "#Calculate array of potential values\n",
     "v = np.zeros(n)\n",
     "r = np.linspace(RMin,RMax,n)\n",
     "for i in range(n):\n",
     "    r[i] = RMin + (i+1) * Step\n",
-    "    v[i] = potential(r[i])\n",
+    "    v[i] = potential(r[i],omega)\n",
     "\n",
     "#Setting up a tridiagonal matrix and finding eigenvectors and eigenvalues\n",
     "Hamiltonian = np.zeros((n,n))\n",
@@ -613,75 +602,26 @@
    "source": [
     "<!-- --- begin exercise --- -->\n",
     "\n",
-    "## Exercise 1: Hydrogen atom (challenge)\n",
+    "## Exercise 1: Exploring various oscillator traps\n",
     "\n",
     "\n",
     "**a)**\n",
-    "Replace now the one-dimensional Schrödinger equation with the three-dimensional one where we have made a transformation from Cartesian coordinates to spherical coordinates with $r\\in [0,\\infty)$ and $\\phi\\in [0,2\\pi]$ and $\\theta \\in [0,\\pi]$.\n",
-    "The radial equation reads"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "-\\frac{\\hbar^2}{2 m} \\left ( \\frac{1}{r^2} \\frac{d}{dr} r^2\n",
-    "  \\frac{d}{dr} - \\frac{l (l + 1)}{r^2} \\right )R(r) \n",
-    "     + V(r) R(r) = E R(r).\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The quantum number\n",
-    "$l$ is the orbital momentum of the electron.   Substitute $R(r) = (1/r) u(r)$ and show that the equation becomes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "-\\frac{\\hbar^2}{2 m} \\frac{d^2}{dr^2} u(r) \n",
-    "       + \\left ( V(r) + \\frac{l (l + 1)}{r^2}\\frac{\\hbar^2}{2 m}\n",
-    "                                    \\right ) u(r)  = E u(r) .\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The boundary conditions are $u(0)=0$ and $u(\\infty)=0$.\n",
+    "Here we will study the cases $\\omega_r = 0.01$, $\\omega_r = 0.5$, $\\omega_r =1$,\n",
+    "and $\\omega_r = 5$   \n",
+    "for the ground state only, that is the lowest-lying state.\n",
     "\n",
-    "**b)**\n",
-    "We introduce a dimensionless variable $\\rho = (1/\\alpha) r$\n",
-    "where $\\alpha$ is a constant with dimension length. Show that you can rewrite the above differential equation as"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "-\\frac{\\hbar^2}{2 m \\alpha^2} \\frac{d^2}{d\\rho^2} u(\\rho) \n",
-    "       + \\left ( V(\\rho) + \\frac{l (l + 1)}{\\rho^2}\n",
-    "         \\frac{\\hbar^2}{2 m\\alpha^2} \\right ) u(\\rho)  = E u(\\rho) .\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**c)**\n",
-    "Define now the potential $V$ to be the electrostatic Coulomb potential and scale the equations so that you get rid of the parameter $\\alpha$. This choice of $\\alpha$ leads to a famous length scale in physics. What is the name of this parameter?\n",
+    "With no repulsive Coulomb interaction \n",
+    "you should get a result which corresponds to \n",
+    "the relative energy of a non-interacting system.   \n",
+    "Make sure your results are \n",
+    "stable as functions of $\\rho_{\\mathrm{max}}$ and the number of steps.\n",
     "\n",
-    "**d)**\n",
-    "Set $l=0$ and find the three lowest eigenvalues and compare them with the analytical results!\n",
+    "We are only interested in the ground state with $l=0$. We omit the \n",
+    "center-of-mass energy.\n",
+    "\n",
+    "For specific oscillator frequencies, the above equation has analytic answers,\n",
+    "see the article by M. Taut, Phys. Rev. A 48, 3561 - 3566 (1993).\n",
+    "The article can be retrieved from the following web address <http://prola.aps.org/abstract/PRA/v48/i5/p3561_1>.\n",
     "\n",
     "<!-- --- end exercise --- -->"
    ]
