--- a/docs/src/MortensMaterial/Day5Lec1.ipynb
+++ b/docs/src/MortensMaterial/Day5Lec1.ipynb
@@ -600,13 +600,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For specific oscillator frequencies, the system of equations with the Coulomb interaction  has analytic answers,\n",
+    "see the article by M. Taut, Phys. Rev. A 48, 3561 - 3566 (1993).\n",
+    "The article can be retrieved from the following web address <http://prola.aps.org/abstract/PRA/v48/i5/p3561_1>.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "<!-- --- begin exercise --- -->\n",
     "\n",
     "## Exercise 1: Exploring various oscillator traps\n",
     "\n",
-    "\n",
-    "**a)**\n",
-    "Here we will study the cases $\\omega_r = 0.01$, $\\omega_r = 0.5$, $\\omega_r =1$,\n",
+    "Here we will study the cases with frequencies $\\omega_r = 0.01$, $\\omega_r = 0.5$, $\\omega_r =1$,\n",
     "and $\\omega_r = 5$   \n",
     "for the ground state only, that is the lowest-lying state.\n",
     "\n",
@@ -619,9 +626,17 @@
     "We are only interested in the ground state with $l=0$. We omit the \n",
     "center-of-mass energy.\n",
     "\n",
-    "For specific oscillator frequencies, the above equation has analytic answers,\n",
-    "see the article by M. Taut, Phys. Rev. A 48, 3561 - 3566 (1993).\n",
-    "The article can be retrieved from the following web address <http://prola.aps.org/abstract/PRA/v48/i5/p3561_1>.\n",
+    "\n",
+    "**a)**\n",
+    "Perform first a calculation for the ground state only with $\\omega_r=1.0$. Compare the energies obtained with and without the Coulomb interaction. Plot the wavefunctions squared and compare the interacting and non-interacting cases. Commment your results. Are these results expected?\n",
+    "\n",
+    "\n",
+    "**b)**\n",
+    "Repeat the previous exercise but now for all the frequencies $\\omega_r = 0.01$, $\\omega_r = 0.5$, $\\omega_r =1$,\n",
+    "and $\\omega_r = 5$   \n",
+    "for the ground state only. Compare the non-interacting case with the interacting case. Are there bigger or smaller differences between the interacting and non-interacting cases as function of $\\omega_r$? Comment your results.\n",
+    "\n",
+    "\n",
     "\n",
     "<!-- --- end exercise --- -->"
    ]
