updated typos in day 5

--- a/docs/src/MortensMaterial/Day5Lec1.ipynb
+++ b/docs/src/MortensMaterial/Day5Lec1.ipynb
@@ -12,7 +12,8 @@
     "\n",
     "Date: **June 23, 2021**\n",
     "\n",
-    "## Discretizing The Schrödinger  Equation\n",
+    "## Discretizing the Schrödinger  Equation\n",
+    "\n",
     "Thursday we discretized the one-dimensional Schrödinger equation for one electron moving in a given potential.\n",
     "Here's a short repetition.\n",
     "\n",
